2005-11-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: make auto-hosting work in apache 1.3.

2005-11-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: fix problems in 1.1.10 regarding user-configured applications.
	We were finding the global server instead of the default one.

2005-11-09  Robert Jordan  <robertj@gmx.net>

	* src/mod_mono.*: fixed compatibility issue with Apache 1.3.

2005-11-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mod_mono.conf.in: added ASP.NET extensions to the configuration file.
	* src/mod_mono.c: added MonoAutoApplication directive and support for
	automatically registering new ASP.NET applications as they are
	discovered.

2005-10-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.1.9.99.
	* src/mod_mono.[ch]: server variables are now written with the rest of
	the initial data sent to mod-mono-server. Variables starting with HTTP_
	are not sent, as those will be created by System.Web from the headers.

2005-10-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: send all the server variables in one single write.
	Before we did 2 writes per variable. Incremented version to 5. You'll
	need to sync with xsp.
	* src/mod_mono.h: add table defines for apache 1.3.

2005-10-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.[ch]:
	(get_default_socket_name): handle the NULL alias case setting it to
	"default".
	Style fixes and replaced sprintf with apr_psprintf.

2005-09-23 Joshua Tauberer <tauberer@for.net>

	* src/mod_mono.c:
	
	  The default alias for xsp's within vhosts is the name of the
	  vhost server, so that vhosts with default aliases don't all
	  use the same Unix socket file name.  A new is_default field
	  tracks whether an XSP is the server default, rather than using
	  the "default" alias.
	  
	  Aliases are never NULL except when passed to search_for_alias,
	  start_xsp, and terminate_xsp2.
	  