@@ -1,3 +1,9 @@
+2005-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* man/mod_mono.8.in:
+	* INSTALL: add documentation about the control panel. Patch by Matthew
+	Law.
+
 2005-11-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* src/mod_mono.c: make auto-hosting work in apache 1.3.
